Formatted task_1 and options for linux in makefile

--- a/2nd_semester/task_3/Makefile
+++ b/2nd_semester/task_3/Makefile
@@ -15,3 +15,8 @@ parabola.o: parabola.cpp
 
 clean: 
 	del *.o *.gch
+
+# higher for windows, lower for linux. Uncomment and comment the necessary things.
+
+#clean:
+#	rm -rf *.o *.gch
