--- a/2nd_semester/task_2/Makefile
+++ b/2nd_semester/task_2/Makefile
@@ -15,3 +15,8 @@ polynomial.o: polynomial.cpp
 
 clean: 
 	del *.o *.gch
+
+# higher for windows, lower for linux. Uncomment and comment the necessary things.
+
+#clean:
+#	rm -rf *.o *.gch
